--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "babel-eslint": "^9.0.0",
+        "browser-sync": "^2.24.7",
+        "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
         "eslint": "^5.5.0",
         "eslint-config-airbnb-base": "^13.1.0",
@@ -21,6 +23,7 @@
         "laravel-mix": "^2.0"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "vue": "^2.5.7"
     }
 }
